Fix iOS scroll to footer + objectPosition 40% for more left visibility

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  overflow-x: clip;
   max-width: 100%;
   width: 100%;
   position: relative;
